Bug 47102 - UI: Conditional Formating : the control for entering a formula is hidden
Summary: UI: Conditional Formating : the control for entering a formula is hidden
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.6.0 target:3.5.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-08 07:52 UTC by pierre-yves samyn
Modified: 2012-03-09 11:26 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot 1 (3.81 KB, image/png)
2012-03-08 07:52 UTC, pierre-yves samyn
Details
Screenshot 2 (control hidden) (3.64 KB, image/png)
2012-03-08 07:53 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-03-08 07:52:23 UTC
Created attachment 58196 [details]
Screenshot 1

Hello 

1. File> New> Spreadsheet (same problem with an existing one)
2. Current cell A1 
3. Format> Conditional Formatting...
4. Condition 1 (same problem with other conditions)
5. "Cell value is" > choose "duplicated values" (same with "non duplicated values")

Expected and Actual result : TextBox control for entering a value is hidden (screenshot 1)

6. Choose "Formula is" instead of "Cell value is"

Expected result: show the TextBox control for entering a formula
Actual result : the control is still hidden (screenshot 2)

Workaround : reselect "Cell value is" with another choice (equal to for instance), then select "Formula is"

Regards
Pierre-Yves
Comment 1 pierre-yves samyn 2012-03-08 07:53:11 UTC
Created attachment 58197 [details]
Screenshot 2 (control hidden)
Comment 2 Markus Mohrhard 2012-03-08 11:09:15 UTC
Will look into it. Looks like a missing line in a linked function.
Comment 3 Markus Mohrhard 2012-03-08 14:54:57 UTC
Has been an easy fix.
Comment 4 Not Assigned 2012-03-08 16:30:27 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f361431f944abd9e12fad80f4880fa111214ff06

Set entries correctly visible, fdo#47102
Comment 5 Not Assigned 2012-03-09 11:26:27 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff3322a98f7817bd383a2d88fa5ba057648dfeaf&g=libreoffice-3-5

Set entries correctly visible, fdo#47102


It will be available in LibreOffice 3.5.2.