Set entries correctly visible, fdo#47102